2009-09-10  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jurbanski

	* data/glade/httpstreamer-wizard.glade:
	* flumotion/admin/assistant/interfaces.py:
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	Adapt cortado plug to the new plugarea
	* flumotion/scenario/steps/httpstreamersteps.py:
	* flumotion/ui/Makefile.am:
	* flumotion/ui/plugarea.py (added):
	Move PlugArea from inside the httpstreamersteps module to its own. So it
	can be used by other steps and generalized.
	Helps #1337

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* Makefile.am:
	* common/common.mk:
	Also build .gz packages, some Debian packaging tools only
	understand that format.

	* doc/random/release:
	Mention uploading both .bz2 and .gz.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* doc/random/release:
	Refine the release process.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion.doap:
	Update for 0.6.1 release.

2009-09-09  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/scenario/ondemand/wizard_gtk.py:
	* flumotion/scenario/steps/ondemandstep.py:
	Add a porter when creating an ondemand stream using the wizard.
	Closes #994.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/muxers/multipart.py:
	Add warnings about multipart deficiency in gst-plugins-good up to
	0.10.17.
	Closes #1342.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/encoders/mulaw/mulaw.py:
	Force mulaw to be 8000 Hz mono.
	We only support mulaw in multipart and RFC2046 mandates the audio/basic
	content-type of multipart to be 8000 Hz single channel.

2009-09-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/encoders/dirac/dirac.py:
	Add warnings about a bug that existed in schroenc before it was moved
	to gst-plugins-bad and released in 0.10.14.
