@@ -1,3 +1,12 @@
+2009-09-10  Alvin Delagon  <adelagon@flumotion.com>
+
+	reviewed by: Jan Urbanski
+
+	* flumotion/twisted/flavors.py:
+	Add helper methods that will allow objects to listen on uiState
+	observer events.
+	Fixes #1357
+
 2009-09-10  Xavier Queralt  <xqueralt@flumotion.com>
 
 	reviewed by: jurbanski
